testdata/invalidwiki/Страница без контента/__page.opt
[General]
tags = Тест, test, двойной тег
type = html

[Section1]
param1 = абырвалг
param2 = 125
